--- a/src/bookingSystem/OwnerMenu.fxml
+++ b/src/bookingSystem/OwnerMenu.fxml
@@ -34,13 +34,14 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <ComboBox fx:id="empSelect2" layoutX="285.0" layoutY="97.0" onAction="#addWorkingTimes" prefWidth="150.0" />
+                  <ComboBox fx:id="empSelect2" layoutX="285.0" layoutY="97.0" prefWidth="150.0" />
                   <Label layoutX="196.0" layoutY="45.0" text="Select an Employee to add working times" />
-                  <TextField layoutX="61.0" layoutY="218.0" />
-                  <TextField layoutX="435.0" layoutY="218.0" />
+                  <TextField fx:id="txtWorkStart" layoutX="61.0" layoutY="218.0" />
+                  <TextField fx:id="txtWorkEnd" layoutX="435.0" layoutY="218.0" />
                   <Label layoutX="61.0" layoutY="180.0" text="Start time" />
                   <Label layoutX="435.0" layoutY="180.0" text="End Time" />
                   <Label fx:id="workTimeMessage" layoutX="194.0" layoutY="313.0" prefHeight="27.0" prefWidth="332.0" textFill="RED" />
+                  <Button fx:id="addTimeBut" layoutX="308.0" layoutY="307.0" mnemonicParsing="false" onAction="#addWorkingTimes" text="Add times" />
                </children></AnchorPane>
         </content>
       </Tab>
@@ -61,7 +62,7 @@
                <children>
                   <TextField fx:id="txtAddEmp" layoutX="248.0" layoutY="179.0" onAction="#addEmployee" />
                   <Label layoutX="236.0" layoutY="136.0" text="Enter the new Employees name" />
-                  <Label fx:id="addEmpMessage" layoutX="248.0" layoutY="239.0" prefHeight="27.0" prefWidth="224.0" />
+                  <Label fx:id="empAddMessage" layoutX="248.0" layoutY="239.0" prefHeight="27.0" prefWidth="224.0" />
                </children></AnchorPane>
       </content>
     </Tab>
