--- a/src/bookingSystem/Registration.fxml
+++ b/src/bookingSystem/Registration.fxml
@@ -63,32 +63,32 @@
                   <Font size="12.0" />
                </font>
             </Label>
-            <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="txtUsername" onAction="#register" GridPane.columnIndex="1">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </TextField>
+            <PasswordField fx:id="txtPassword" onAction="#register" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="12.0" />
                </font>
             </PasswordField>
-            <PasswordField fx:id="txtConfirmPassword" onAction="#validatePassword" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <PasswordField fx:id="txtConfirmPassword" onAction="#register" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="12.0" />
                </font>
             </PasswordField>
-            <TextField fx:id="txtUsername" onAction="#validateUsername" GridPane.columnIndex="1">
+            <TextField fx:id="txtPhone" onAction="#register" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="12.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtPhone" onAction="#validatePhone" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="txtEmail" onAction="#register" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font size="12.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtEmail" onAction="#validateEmail" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="txtName" onAction="#validateName" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <TextField fx:id="txtName" onAction="#register" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="12.0" />
                </font>
@@ -118,6 +118,7 @@
                   <Font size="12.0" />
                </font>
             </Label>
+            <Label fx:id="registerMessage" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <Label layoutX="110.0" layoutY="78.0" text="Registration">
