--- a/src/bookingSystem/Login.fxml
+++ b/src/bookingSystem/Login.fxml
@@ -14,5 +14,6 @@
       <Button fx:id="loginButton" layoutX="260.0" layoutY="321.0" mnemonicParsing="false" onAction="#login" prefHeight="30.0" prefWidth="150.0" text="Log In" />
       <Label fx:id="invLoginName" layoutX="450.0" layoutY="188.0" textFill="RED" />
       <Label fx:id="invLoginPass" layoutX="450.0" layoutY="262.0" textFill="RED" />
+      <Button fx:id="loginBack" layoutX="259.0" layoutY="369.0" mnemonicParsing="false" onAction="#backToMain" prefHeight="39.0" prefWidth="150.0" text="Back" />
    </children>
 </AnchorPane>
