--- a/src/bookingSystem/Main.fxml
+++ b/src/bookingSystem/Main.fxml
@@ -15,5 +15,6 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button layoutX="260.0" layoutY="292.0" mnemonicParsing="false" onAction="#exit" prefHeight="39.0" prefWidth="200.0" text="Quit" />
    </children>
 </AnchorPane>
