--- a/src/bookingSystem/Registration.fxml
+++ b/src/bookingSystem/Registration.fxml
@@ -119,6 +119,11 @@
                </font>
             </Label>
             <Label fx:id="registerMessage" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <Button fx:id="regBack" mnemonicParsing="false" onAction="#backToMain" prefHeight="39.0" prefWidth="275.0" text="Back" textAlignment="RIGHT" GridPane.rowIndex="6">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
       <Label layoutX="110.0" layoutY="78.0" text="Registration">
