addBooking/workingtimes made gui Like - add booking not functional

--- a/src/bookingSystem/Registration.fxml
+++ b/src/bookingSystem/Registration.fxml
@@ -25,7 +25,7 @@
             <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="btRegister" mnemonicParsing="false" prefHeight="39.0" prefWidth="275.0" text="Register" textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Button fx:id="btRegister" mnemonicParsing="false" onAction="#register" prefHeight="39.0" prefWidth="275.0" text="Register" textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
