--- a/src/bookingSystem/OwnerMenu.fxml
+++ b/src/bookingSystem/OwnerMenu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -7,6 +8,20 @@
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookingSystem.SystemDriver">
   <tabs>
+      <Tab onSelectionChanged="#logout" text="Welcome">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="272.0" layoutY="108.0" text="Welcome Owner">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="316.0" layoutY="179.0" mnemonicParsing="false" text="Log Out" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
       <Tab text="View Bookings">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -42,7 +57,7 @@
                   <TextField fx:id="txtWorkEnd" layoutX="175.0" layoutY="318.0" />
                   <Label layoutX="175.0" layoutY="221.0" text="Start time" />
                   <Label layoutX="175.0" layoutY="291.0" text="End Time" />
-                  <Label fx:id="workTimeMessage" layoutX="194.0" layoutY="313.0" prefHeight="27.0" prefWidth="332.0" textFill="RED" />
+                  <Label fx:id="workTimeMessage" layoutX="174.0" layoutY="388.0" prefHeight="27.0" prefWidth="529.0" textFill="RED" />
                   <Button fx:id="addTimeBut" layoutX="474.0" layoutY="200.0" mnemonicParsing="false" onAction="#addWorkingTimes" text="Add times" />
                   <Label layoutX="175.0" layoutY="151.0" text="Day" />
                   <ComboBox fx:id="selectDay" layoutX="174.0" layoutY="178.0" prefWidth="150.0" />
