--- a/src/bookingSystem/OwnerMenu.fxml
+++ b/src/bookingSystem/OwnerMenu.fxml
@@ -8,7 +8,7 @@
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookingSystem.SystemDriver">
   <tabs>
-      <Tab onSelectionChanged="#logout" text="Welcome">
+      <Tab text="Welcome">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -17,7 +17,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button layoutX="316.0" layoutY="179.0" mnemonicParsing="false" text="Log Out" />
+                  <Button layoutX="316.0" layoutY="179.0" mnemonicParsing="false" onAction="#logout" text="Log Out" />
                </children>
             </AnchorPane>
         </content>
@@ -61,7 +61,7 @@
                   <Button fx:id="addTimeBut" layoutX="474.0" layoutY="200.0" mnemonicParsing="false" onAction="#addWorkingTimes" text="Add times" />
                   <Label layoutX="175.0" layoutY="151.0" text="Day" />
                   <ComboBox fx:id="selectDay" layoutX="174.0" layoutY="178.0" prefWidth="150.0" />
-                  <Button fx:id="ownerLogutThree" layoutX="14.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" text="Log Out" />
+                  <Button fx:id="ownerLogoutThree" layoutX="14.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" text="Log Out" />
                </children></AnchorPane>
         </content>
       </Tab>
