--- a/src/bookingSystem/OwnerMenu.fxml
+++ b/src/bookingSystem/OwnerMenu.fxml
@@ -75,10 +75,19 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TextField fx:id="txtAddEmp" layoutX="248.0" layoutY="179.0" onAction="#addEmployee" />
-                  <Label layoutX="236.0" layoutY="136.0" text="Enter the new Employees name" />
-                  <Label fx:id="addEmpMessage" layoutX="248.0" layoutY="239.0" prefHeight="27.0" prefWidth="224.0" />
+                  <TextField fx:id="txtAddEmpName" layoutX="248.0" layoutY="113.0" />
+                  <Label layoutX="276.0" layoutY="48.0" text="Add a new employee" />
+                  <Label fx:id="addEmpMessage" layoutX="248.0" layoutY="302.0" prefHeight="27.0" prefWidth="224.0" />
                   <Button fx:id="ownerLogoutFive" layoutX="14.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" text="Log Out" />
+                  <TextField fx:id="txtAddEmpAddress" layoutX="248.0" layoutY="167.0" />
+                  <TextField fx:id="txtAddEmpPhone" layoutX="248.0" layoutY="220.0" />
+                  <Label layoutX="189.0" layoutY="119.0" text="Name:" />
+                  <Label layoutX="173.0" layoutY="173.0" text="Address:" />
+                  <Label layoutX="188.0" layoutY="226.0" text="Phone:" />
+                  <Label fx:id="invAddEmpName" layoutX="484.0" layoutY="119.0" textFill="RED" />
+                  <Label fx:id="invAddEmpAddress" layoutX="484.0" layoutY="173.0" textFill="RED" />
+                  <Label fx:id="invPhone" layoutX="484.0" layoutY="226.0" textFill="RED" />
+                  <Button fx:id="addEmpBut" layoutX="248.0" layoutY="351.0" mnemonicParsing="false" onAction="#addEmployee" text="Add Employee" />
                </children></AnchorPane>
       </content>
     </Tab>
