--- a/src/bookingSystem/CustomerMenu.fxml
+++ b/src/bookingSystem/CustomerMenu.fxml
@@ -44,13 +44,13 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ComboBox fx:id="makeBookingService" layoutX="250.0" layoutY="51.0" prefWidth="150.0" onAction="#updateMakeBooking_Service" />
+                        <ComboBox fx:id="makeBookingService" layoutX="250.0" layoutY="51.0" onAction="#updateMakeBooking_Service" prefWidth="150.0" />
                         <Label layoutX="250.0" layoutY="24.0" text="Select Service Type" />
-                        <ComboBox fx:id="makeBookingEmployee" layoutX="250.0" layoutY="129.0" prefWidth="150.0" onAction="#updateMakeBooking_Employee" />
+                        <ComboBox fx:id="makeBookingEmployee" layoutX="250.0" layoutY="129.0" onAction="#updateMakeBooking_Employee" prefWidth="150.0" />
                         <Label layoutX="250.0" layoutY="102.0" text="Select Employee" />
-                        <ComboBox fx:id="makeBookingDay" layoutX="251.0" layoutY="208.0" prefWidth="150.0" onAction="#updateMakeBooking_Day" />
+                        <ComboBox fx:id="makeBookingDay" layoutX="251.0" layoutY="208.0" onAction="#updateMakeBooking_Day" prefWidth="150.0" />
                         <Label layoutX="250.0" layoutY="181.0" text="Select Day" />
-                        <ComboBox fx:id="makeBookingTime" layoutX="251.0" layoutY="295.0" prefWidth="150.0" onAction="#updateMakeBooking_Time" />
+                        <ComboBox fx:id="makeBookingTime" layoutX="251.0" layoutY="295.0" onAction="#updateMakeBooking_Time" prefWidth="150.0" />
                         <Label layoutX="250.0" layoutY="268.0" text="Select Time" />
                         <Button fx:id="makeBookingBut" layoutX="253.0" layoutY="363.0" mnemonicParsing="false" onAction="#addBooking" text="Create Booking" />
                         <Label fx:id="makeBookingMessage" layoutX="412.0" layoutY="369.0" textFill="RED" />
@@ -70,6 +70,9 @@
                      <children>
                         <TextArea fx:id="custBookingsView" layoutX="179.0" layoutY="75.0" prefHeight="285.0" prefWidth="363.0" />
                         <Button fx:id="customerLogoutOne" layoutX="14.0" layoutY="382.0" mnemonicParsing="false" onAction="#logout" text="Log Out" />
+                        <ComboBox fx:id="custBookingID" layoutX="14.0" layoutY="103.0" prefWidth="150.0" />
+                        <Label layoutX="14.0" layoutY="62.0" text="Select booking ID" />
+                        <Button fx:id="cancelBookingBut" layoutX="14.0" layoutY="154.0" mnemonicParsing="false" onAction="#cancelBooking" text="Cancel Booking" />
                      </children></AnchorPane>
             </content>
           </Tab>
